Fix spacing in main.css

--- a/src/smif/app/static/css/main.css
+++ b/src/smif/app/static/css/main.css
@@ -20,22 +20,19 @@
 .jumbotron {
   padding: 20px;
 }
-
 body {
     font-size: .875rem;
-  }
-  
-  .feather {
+}
+.feather {
     width: 16px;
     height: 16px;
     vertical-align: text-bottom;
-  }
-  
-  /*
-   * Sidebar
-   */
-  
-  .sidebar {
+}
+
+/*
+ * Sidebar
+ */
+.sidebar {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -43,9 +40,8 @@ body {
     z-index: 100; /* Behind the navbar */
     padding: 0;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-  }
-  
-  .sidebar-sticky {
+}
+.sidebar-sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 48px; /* Height of navbar */
@@ -53,71 +49,64 @@ body {
     padding-top: .5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  }
-  
-  .sidebar .nav-link {
+}
+.sidebar .nav-link {
     font-weight: 500;
     color: #333;
-  }
-  
-  .sidebar .nav-link .feather {
+}
+.sidebar .nav-link .feather {
     margin-right: 4px;
     color: #999;
-  }
-  
-  .sidebar .nav-link.active {
+}
+.sidebar .nav-link.active {
     color: #000000;
-  }
-  
-  .sidebar .nav-link:hover .feather,
-  .sidebar .nav-link.active .feather {
+}
+.sidebar .nav-link:hover .feather,
+.sidebar .nav-link.active .feather {
     color: inherit;
-  }
-  
-  .sidebar-heading {
+}
+.sidebar-heading {
     font-size: .75rem;
     text-transform: uppercase;
-  }
-  
-  /*
-   * Navbar
-   */
-  
-  .navbar-brand {
+}
+
+/*
+ * Navbar
+ */
+.navbar-brand {
     padding-top: .75rem;
     padding-bottom: .75rem;
     font-size: 1rem;
     background-color: rgba(0, 0, 0, .25);
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-  }
-  
-  .navbar .form-control {
+}
+.navbar .form-control {
     padding: .75rem 1rem;
     border-width: 0;
     border-radius: 0;
-  }
-
-  .nav-link{
+}
+.nav-link{
     outline:none;
-  }
-  .nav-link::-moz-focus-inner {
+}
+.nav-link::-moz-focus-inner {
     border: 0;
-  }
-  
-  .form-control-dark {
+}
+.form-control-dark {
     color: #fff;
     background-color: rgba(255, 255, 255, .1);
     border-color: rgba(255, 255, 255, .1);
-  }
-  
-  .form-control-dark:focus {
+}
+.form-control-dark:focus {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-  }
-  
-  /*
-   * Utilities
-   */
-  
-  .border-top { border-top: 1px solid #e5e5e5; }
-  .border-bottom { border-bottom: 1px solid #e5e5e5; }
+}
+
+/*
+ * Utilities
+ */
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
